--- a/barchart.html
+++ b/barchart.html
@@ -7,10 +7,12 @@
 
     <!-- Alternatively use d3.js here -->
     <script type="text/javascript" src="d3.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   </head>
 
   <body>
+    <div id="chart" style="height:100%;"></div>
     <script type="text/javascript" src="barchart.js"></script>
   </body>
 </html>
